[FIX] sap.m.Popover: Scrollbars are now displayed on Safari
SNOW: DINC0661377

--- a/src/sap.m/src/sap/m/themes/base/Popover.less
+++ b/src/sap.m/src/sap/m/themes/base/Popover.less
@@ -31,11 +31,6 @@
 	height: 100%;
 }
 
-.sapMPopoverCont::-webkit-scrollbar {
-	border-bottom-right-radius: var(--sapPopover_BorderCornerRadius);
-	border-top-right-radius: var(--sapPopover_BorderCornerRadius);
-}
-
 .sapMPopover .sapMIBar.sapMFooter-CTX ,
 .sapMPopover.sapMPopoverWithoutFooter .sapMPopoverCont {
 	border-bottom-right-radius: 0.25rem;
